--- a/Aufgabe4/Station4/card4.css
+++ b/Aufgabe4/Station4/card4.css
@@ -22,7 +22,9 @@ body{
 .formular{
     position: absolute;
     color: white;
-    left: 380px;
+    left: 550px;
+    text-align: center;
+    align-items: center;
 }
 
 
